--- a/backend/package.json
+++ b/backend/package.json
@@ -26,6 +26,7 @@
     "express": "^4.18.2",
     "express-openapi-validator": "^5.0.6",
     "express-rate-limit": "^7.1.1",
+    "express-validator": "^7.0.1",
     "helmet": "^7.0.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
