--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "jsonwebtoken": "^9.0.2",
     "memory-cache": "^0.2.0",
     "mocha": "^10.2.0",
+    "moment": "^2.29.4",
     "mongoose": "^7.6.1",
     "morgan": "^1.10.0",
     "swagger-ui-express": "^5.0.0",
