--- a/backend/package.json
+++ b/backend/package.json
@@ -35,6 +35,7 @@
     "moment": "^2.29.4",
     "mongoose": "^7.6.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "swagger-ui-express": "^5.0.0",
     "yaml": "^2.3.3"
   }
