--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,14 +6,18 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.0",
+    "@mui/lab": "^5.0.0-alpha.157",
     "@mui/material": "^5.15.0",
     "@mui/x-data-grid": "^6.18.5",
+    "@mui/x-date-pickers": "^6.18.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
+    "dayjs": "^1.11.10",
     "express-validator": "^7.0.1",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
